# obsidian-smart-workflow

./: .eslintrc.json  .gitignore  README.md  README_CN.md  esbuild.config.mjs  manifest.json  package-lock.json  package.json  pnpm-lock.yaml  styles.css  tsconfig.json  versions.json
.claude/: settings.local.json
.github/workflows/: README.md  build-rust.yml  release.yml
pty-server/: Cargo.toml  README.md
pty-server/src/: pty_session.rs  server.rs  shell.rs
rust-servers/src/: main.rs
rust-servers/src/llm/: mod.rs  response.rs  sse_parser.rs  thinking.rs
rust-servers/src/utils/: language.rs  mod.rs
scripts/: README.md  README_CN.md  install-dev.js  package-plugin.js
src/: main.ts
src/i18n/: types.ts
src/i18n/locales/: en.ts  zh-CN.ts
src/services/: aiService.ts  fileAnalyzer.ts  fileNameService.ts
src/services/ai/: aiClient.ts  modelFetcher.ts  responseParser.ts
src/services/archiving/: archiveService.ts
src/services/automation/: autoArchiveService.ts
src/services/categorizing/: categoryService.ts
src/services/config/: configManager.ts
src/services/naming/: aiService.ts  errors.ts  fileAnalyzer.ts  fileNameService.ts  modelTypeInferrer.ts
src/services/secret/: index.ts  secretService.ts
src/services/tagging/: tagService.ts
src/services/terminal/: binaryManager.ts  terminalInstance.ts  terminalService.ts
src/services/voice/: assistantProcessor.ts  (+2 more)
src/settings/: settings.ts  settingsTab.ts  types.ts
src/types/: obsidian-augment.d.ts
src/ui/: noticeHelper.ts
src/utils/: logger.ts
tests/: secret-storage-security-validation.ts
(+16 files in other folders)
