[package]
name = "pty-server"
version = "1.0.0"
edition = "2021"

[dependencies]
portable-pty = "0.9"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
clap = { version = "4.5", features = ["derive"] }

[profile.release]
opt-level = "z"     # 优化体积
lto = true          # 链接时优化
codegen-units = 1   # 更好的优化
strip = true        # 移除符号表
panic = "abort"     # 减小体积
